[gd_scene load_steps=18 format=2]

[ext_resource path="res://UIModules.gd" type="Script" id=1]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0002.png" type="Texture" id=2]
[ext_resource path="res://Assets/Messages/NewMsgBitmap.png" type="BitMap" id=3]
[ext_resource path="res://DirectMessage.gd" type="Script" id=4]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0008.png" type="Texture" id=5]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0004.png" type="Texture" id=6]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0007.png" type="Texture" id=7]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0003.png" type="Texture" id=8]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0005.png" type="Texture" id=9]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0006.png" type="Texture" id=10]
[ext_resource path="res://Assets/Animations/NewMessageButton/Sprite-0001.png" type="Texture" id=11]
[ext_resource path="res://Assets/spaz-uimockup.png" type="Texture" id=14]
[ext_resource path="res://Notes.gd" type="Script" id=15]
[ext_resource path="res://Assets/Animations/NotesButton/spaz-notebutton1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Animations/NotesButton/spaz-notebutton2.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "unread",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "unread",
"speed": 5.0
} ]

[node name="UIModules" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.315613
margin_top = -0.42141
margin_right = -0.315613
margin_bottom = -0.421417
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 148.639, 94.1856 )
texture = ExtResource( 14 )

[node name="Messaging" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 203.807
margin_top = -127.092
margin_right = 203.807
margin_bottom = -127.092
rect_scale = Vector2( 1.59738, 1.35636 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectMessageBox" type="Control" parent="Messaging"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageDialog" type="WindowDialog" parent="Messaging/DirectMessageBox"]
visible = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 71.0
margin_top = 88.0
margin_right = 175.0
margin_bottom = 92.5
rect_scale = Vector2( 0.805613, 0.692546 )
window_title = "saltA435"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageList" type="ItemList" parent="Messaging/DirectMessageBox/MessageDialog"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewMessageButton" type="TextureButton" parent="Messaging"]
margin_left = 27.0
margin_top = 100.0
margin_right = 39.0
margin_bottom = 109.0
rect_scale = Vector2( 1.61332, 2.33119 )
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 8 )
texture_click_mask = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewMessageSprite" type="AnimatedSprite" parent="Messaging/NewMessageButton"]
scale = Vector2( 1.01571, 0.644159 )
frames = SubResource( 1 )
animation = "unread"

[node name="Notes" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotesButton" type="TextureButton" parent="Notes"]
margin_left = 314.25
margin_top = 95.84
margin_right = 326.25
margin_bottom = 106.84
rect_scale = Vector2( 1.8351, 1.43116 )
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Notes/NotesButton"]
position = Vector2( 1.51995, 4.44311 )
scale = Vector2( 0.34849, 0.0787209 )
frames = SubResource( 2 )
animation = "unread"

[node name="NotesDialog" type="WindowDialog" parent="Notes"]
visible = true
margin_right = 48.0
margin_bottom = 40.0
window_title = "NOTES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoteList" type="ItemList" parent="Notes/NotesDialog"]
margin_right = 90.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="Control" parent="Notes"]
margin_left = 1.51389
margin_top = 63.3472
margin_right = 41.5139
margin_bottom = 103.347
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_entered" from="Messaging/DirectMessageBox" to="Messaging" method="_on_Message_tree_entered"]
[connection signal="pressed" from="Messaging/NewMessageButton" to="Messaging" method="_on_NewMessageButton_pressed"]
[connection signal="pressed" from="Notes/NotesButton" to="Notes" method="_on_NotesButton_pressed"]
[connection signal="tree_entered" from="Notes/Note" to="Notes" method="_on_Note_tree_entered"]
